--- a/_posts/2023-10-15-vmm-ultra-70km.md
+++ b/_posts/2023-10-15-vmm-ultra-70km.md
@@ -116,7 +116,7 @@ Sau race thì mình có một đợt nghỉ dài đến tận giờ mình vẫn 
 
 <figure class='half'>
 	<img src="/img/vmm2023/race-moment-startline-1.JPG" />
-	<img src="/img/vmm2023/race-moment-startline-2.JPG" />
+	<img src="/img/vmm2023/race-moment-startline-2.jpg" />
 	<img src="/img/vmm2023/race-moment-doibo-1.jpg" />
 	<img src="/img/vmm2023/race-moment-doibo-2.jpg" />
 	<img src="/img/vmm2023/race-moment-onroad.jpg" />
