Update media url for mp4 file using LFS

--- a/_posts/2023-10-14-truerace-2023.md
+++ b/_posts/2023-10-14-truerace-2023.md
@@ -17,5 +17,5 @@ Lần này cũng là lần đầu tiên mà mình cũng không viết gì nhiề
 
 
 <video controls style='height: 400px;'>
-	<source src="/img/truerace2023/vlog.mp4" type="video/mp4" />
+	<source src="{{site.mediaurl}}/img/truerace2023/vlog.mp4" type="video/mp4" />
 </video>
