--- a/_posts/2023-10-15-vmm-ultra-70km.md
+++ b/_posts/2023-10-15-vmm-ultra-70km.md
@@ -59,7 +59,7 @@ Tới CP1 thì mình cũng hồi lại một chút vì đoạn đường sau con
 Nạp xong thì mình tiếp tục vừa đi vừa nhìn qua cái map, tiếp ngay trước mặt là một con dốc cũng kha khá thế là mình cũng tranh thủ nạp chút gel vào và chuẩn bị chiến đấu thôi. Đoạn này là trời bắt đầu sáng rõ nhưng chưa bị nắng và mình biết là mình đã k thể tận dụng tốt khoảng thời gian sáng sớm để đi được xa rồi, nhưng mà k nản lòng mà cặm cụi đi thôi. Đoạn này cũng là đoạn mệt rồi và gửi gắm bằng một chiếc video ngắn
 
 <video controls style='height: 400px;'>
-	<source src="/img/vmm2023/race-roadto-cp2.mp4" type="video/mp4" />
+	<source src="{{site.mediaurl}}/img/vmm2023/race-roadto-cp2.mp4" type="video/mp4" />
 </video>
 
 <figure>
@@ -86,7 +86,7 @@ Giờ thì cuộc chơi mới bắt đầu vào giai đoạn gắt nhất, tuy n
 Leo một hồi thì mình cũng lên đến cái đỉnh cao nhất của đồi bò và lúc đó là lúc mình thấy cái mỏm cá heo mà mọi người hay chụp ảnh nhưng mà mình thì k có cảm xúc nữa, chỉ mong tìm đc cái lối down hill ở đâu mà thôi. Thấy đoạn downhill là mình nhẹ nhõm và lúc đó là lúc mà mình đã phải cố gắng hết sức để downhill xuống. Đường lúc đó khá vắng nên là mình cứ thế downhill thôi, mình nhớ là nó có 3 dạng địa hình: Đất sét, đá nhỏ và có một đoạn có những viên đá to và tạo thành những bậc cao. Tuy nhiên là downhill thì mình cũng tập kha khá + chạy đua thời gian nên là lúc đó cắm đầu chạy về CP4 sớm nhất có thể thôi chứ cũng k có gì khác. Nhưng mà phải công nhận là đoạn dốc đó quá xa, mình nhìn map mà nó chỉ dẫn là 3.5km nữa mới hết dốc mà mình đi mãi mới được 100m luôn.
 
 <video controls style='height: 400px;'>
-	<source src="/img/vmm2023/race-roadto-cp4.mp4" type="video/mp4" />
+	<source src="{{site.mediaurl}}/img/vmm2023/race-roadto-cp4.mp4" type="video/mp4" />
 </video>
 
 Về đến CP4 mình đã rất mệt rồi, sau một đoạn cố gắng chạy ở đoạn downhill thì chân mình cũng đau hơn + nắng nữa. Về CP4 việc đầu tiên của mình là đớp 2 miếng dưa hấu rồi phi vào trong nhà và phải dùng ngay 2 tấm lót BVS vào chân vì doạnd downhill về CP4 là chân mình khá đau nhưng mình vẫn cố chịu để chạy chứ k dám đi bộ xuống vì mình biết là đi thế chắc chắn mình k kịp COT. Thay vội 2 tấm lót, cố gắng hít thở để hồi lại nhịp tim rồi lại đóng đồ vào vest rồi ra lấy nước, ăn súp bí ngô và tích cực nạp nhiều dưa hấu để tích đường rồi mình cũng hồi lại và tiếp tục hành trình.
@@ -123,5 +123,5 @@ Sau race thì mình có một đợt nghỉ dài đến tận giờ mình vẫn 
 </figure>
 
 <video controls style='height: 400px;'>
-	<source src="/img/vmm2023/homestay.mp4" type="video/mp4" />
+	<source src="{{site.mediaurl}}/img/vmm2023/homestay.mp4" type="video/mp4" />
 </video>
