--- a/_posts/2023-10-14-truerace-2023.md
+++ b/_posts/2023-10-14-truerace-2023.md
@@ -3,7 +3,7 @@ layout: post
 title:  "Chiến đấu điên cuồng tại True Race"
 date:   2023-10-14 06:41:46 +0700
 categories: runner
-background: '/img/vmm2023/thumb.jpg'
+background: '/vmm2023/thumb.jpg'
 ---
 Chạy & chạy
 
@@ -17,5 +17,5 @@ Lần này cũng là lần đầu tiên mà mình cũng không viết gì nhiề
 
 
 <video controls style='height: 400px;'>
-	<source src="{{site.mediaurl}}/img/truerace2023/vlog.mp4" type="video/mp4" />
+	<source src="{{site.mediaurl}}/truerace2023/vlog.mp4" type="video/mp4" />
 </video>
